objects/Lead.object
<CustomObject>
    <fields>
        <fullName>ParentLead_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Lead Id</description>
        <label>ParentLead ID</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PhoneType_NM__c</fullName>
        <label>Phone Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>voice</fullName>
                </value>
                <value>
                    <fullName>phone</fullName>
                </value>
                <value>
                    <fullName>cellphone</fullName>
                </value>
                <value>
                    <fullName>home</fullName>
                </value>
                <value>
                    <fullName>text</fullName>
                </value>
                <value>
                    <fullName>unknown</fullName>
                </value>
                <value>
                    <fullName>cell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Power_TXT__c</fullName>
        <label>Power</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreferredDealerAccount_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preferred Dealer Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Dealer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PreferredDealerContact_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preferred Dealer Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Dealer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PreferredDealerNumber_NUM__c</fullName>
        <label>Preferred Dealer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriceSource_TXT__c</fullName>
        <label>Price Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriceType_TXT__c</fullName>
        <label>Price Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_TXT__c</fullName>
        <label>Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductInterest_TXT__c</fullName>
        <label>Product Interest</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ProductLine__c</fullName>
        <label>ProductLine</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Model_Group_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Model Group</label>
        <referenceTo>Product_Model_Group__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Model_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Model</label>
        <referenceTo>Product_Model__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Production_Month__c</fullName>
        <label>Production Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prospect_Ids_ID__c</fullName>
        <label>Prospect IDs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProviderContactDetail_TXT__c</fullName>
        <label>Provider Contact Detail</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProviderDetail_TXT__c</fullName>
        <inlineHelpText>Source Lead Provider Name</inlineHelpText>
        <label>Provider Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ProviderService_TXT__c</fullName>
        <label>Provider Service</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProviderSourceType_TXT__c</fullName>
        <label>Provider Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>T1</fullName>
                </value>
                <value>
                    <fullName>T2</fullName>
                </value>
                <value>
                    <fullName>T3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider_Additional_Source_Information__c</fullName>
        <description>Additional information of the source. Formerly called &quot;Source Name&quot; in eShopping</description>
        <label>Additional Source Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Provider_Ids_ID__c</fullName>
        <label>Provider IDs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Provider_Tool_Name__c</fullName>
        <description>The tool via which a lead is generated at a dealer web site,  specific for dealers to see as concatenated with Provider Name.  For example, ePrice Tool.  External</description>
        <label>Provider Tool</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Type__c</fullName>
        <label>Provider Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_URL__c</fullName>
        <description>Actual web (URL)  that a provider used to collect this lead</description>
        <label>Provider URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PurchaseEarliestDate_DT__c</fullName>
        <label>Purchase Earliest Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PurchaseHorizon_TXT__c</fullName>
        <label>Purchase Horizon</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PurchaseLatestDate_DT__c</fullName>
        <label>Purchase Latest Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_AMT__c</fullName>
        <label>Quote</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reconfirm_Interest__c</fullName>
        <label>Reconfirm Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relative_TXT__c</fullName>
        <label>Relative to</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequiresManualValidation_FLG__c</fullName>
        <formula>( LeadProvider_ID__r.RecordType.DeveloperName   &lt;&gt;  &apos;Provider&apos; ||  ISBLANK( LeadProvider_ID__c ) )  ||  (ValidEmail_FLG__c = FALSE)  || (ISBLANK(ContactKey_TXT__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requires Manual Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reservation_Id__c</fullName>
        <label>Reservation Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoutingDate_DT__c</fullName>
        <label>Routing Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFMC_Sales_description__c</fullName>
        <label>SFMC Sales description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFMC_Sales_errorcode__c</fullName>
        <label>SFMC Sales errorcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFMC_Sales_errordescription__c</fullName>
        <label>SFMC Sales errordescription</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFMC_Sales_status__c</fullName>
        <label>SFMC Sales status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFMC_Service_description__c</fullName>
        <label>SFMC Service description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFMC_Service_errorcode__c</fullName>
        <label>SFMC Service errorcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFMC_Service_errordescription__c</fullName>
        <label>SFMC Service errordescription</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFMC_Service_status__c</fullName>
        <label>SFMC Service status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFMC_description_TXT__c</fullName>
        <label>SFMC Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFMC_errorcode_TXT__c</fullName>
        <label>SFMC Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFMC_errordescription_TXT__c</fullName>
        <label>SFMC Error Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFMC_status_TXT__c</fullName>
        <label>SFMC Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesRelatedDealerNumber__c</fullName>
        <description>SalesRelatedDealerNumber</description>
        <label>SalesRelatedDealerNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Matchback_Date__c</fullName>
        <label>Sales Matchback Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Status__c</fullName>
        <label>Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Waitlist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SUVs and Crossovers</fullName>
                </value>
                <value>
                    <fullName>Cars</fullName>
                </value>
                <value>
                    <fullName>Minivan and Truck</fullName>
                </value>
                <value>
                    <fullName>Electrified</fullName>
                </value>
                <value>
                    <fullName>Street</fullName>
                </value>
                <value>
                    <fullName>Offroad</fullName>
                </value>
                <value>
                    <fullName>ATV</fullName>
                </value>
                <value>
                    <fullName>SXS</fullName>
                </value>
                <value>
                    <fullName>Generators</fullName>
                </value>
                <value>
                    <fullName>Lawn Mowers</fullName>
                </value>
                <value>
                    <fullName>Snow Blowers</fullName>
                </value>
                <value>
                    <fullName>Pumps</fullName>
                </value>
                <value>
                    <fullName>Tillers</fullName>
                </value>
                <value>
                    <fullName>Trimmers</fullName>
                </value>
                <value>
                    <fullName>Robotic Mowers</fullName>
                </value>
                <value>
                    <fullName>Outboard Motors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_confirmation_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Business Unit: HELMS.
Jira Story: LMS-5361 Story name.
Description: This is store the true or false form SFMC.
Source System: Coming from Integration.
Integration: No
Data Transformation: N/A.
Functional Definition: If the  flag is true Lead  Data sent to SFMC.</description>
        <label>Send confirmation Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_for_Enrichment_Date_Time__c</fullName>
        <label>Sent for Enrichment Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sent_to_Urban_Science_Status__c</fullName>
        <label>Sent to Urban Science Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceRelatedDealerNumber__c</fullName>
        <description>ServiceRelatedDealerNumber</description>
        <label>Service Related Dealer Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shopping_Tool_Name__c</fullName>
        <description>Internal tool Name. Calculator vs. Inventory vs. Offers</description>
        <label>Shopping Tool</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceCode_TXT__c</fullName>
        <formula>TEXT( Source_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceUser_TXT__c</fullName>
        <label>Source User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Name__c</fullName>
        <label>Source Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FB</fullName>
                    <label>Facebook</label>
                </value>
                <value>
                    <fullName>GY</fullName>
                    <label>Gigya</label>
                </value>
                <value>
                    <fullName>TD</fullName>
                    <label>Dealer Associate</label>
                </value>
                <value>
                    <fullName>TH</fullName>
                    <label>Company Associate</label>
                </value>
                <value>
                    <fullName>HH</fullName>
                    <label>HondaHelper</label>
                </value>
                <value>
                    <fullName>CM</fullName>
                    <label>CampaignName</label>
                </value>
                <value>
                    <fullName>TB</fullName>
                    <label>Business Partner Associate</label>
                </value>
                <value>
                    <fullName>TW</fullName>
                    <label>Twitter</label>
                </value>
                <value>
                    <fullName>IG</fullName>
                    <label>Ignition One</label>
                </value>
                <value>
                    <fullName>American Honda eShopping Service</fullName>
                </value>
                <value>
                    <fullName>sample2.eshopping.services.honda.com</fullName>
                </value>
                <value>
                    <fullName>powersports.honda.com</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Unique_ID__c</fullName>
        <label>Source Unique ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Special_Requests__c</fullName>
        <label>Special Requests</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusReason_TXT__c</fullName>
        <defaultValue>(&quot;Pending&quot;)</defaultValue>
        <label>Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Inactivity</fullName>
                </value>
                <value>
                    <fullName>Duplicate Merged</fullName>
                </value>
                <value>
                    <fullName>Validation Email</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Lead Provider error</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Opt Out</fullName>
                </value>
                <value>
                    <fullName>Duplicate Similar</fullName>
                </value>
                <value>
                    <fullName>Matched Leads</fullName>
                </value>
                <value>
                    <fullName>Related Opportunity closed</fullName>
                </value>
                <value>
                    <fullName>Unable to assign Dealer</fullName>
                </value>
                <value>
                    <fullName>Name/Address/Email Error</fullName>
                </value>
                <value>
                    <fullName>Name/Address/Email Cache</fullName>
                </value>
                <value>
                    <fullName>Third Party Duplicate</fullName>
                </value>
                <value>
                    <fullName>Waiting for the routing window to start</fullName>
                </value>
                <value>
                    <fullName>Routing Window Expired</fullName>
                </value>
                <value>
                    <fullName>Concierge</fullName>
                </value>
                <value>
                    <fullName>Lead Enrichment call error</fullName>
                </value>
                <value>
                    <fullName>Dealer Assignment call failed</fullName>
                </value>
                <value>
                    <fullName>Journey Completed</fullName>
                </value>
                <value>
                    <fullName>New Opportunity Created</fullName>
                </value>
                <value>
                    <fullName>Journey incomplete, no response</fullName>
                </value>
                <value>
                    <fullName>Concierge Completed</fullName>
                </value>
                <value>
                    <fullName>Invalid email and phone</fullName>
                </value>
                <value>
                    <fullName>Customer is not Interested in the product</fullName>
                </value>
                <value>
                    <fullName>In nurturing journey</fullName>
                </value>
                <value>
                    <fullName>Waiting for Deal Information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubDiv_TXT__c</fullName>
        <label>Subdivision</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Division_CD__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Subdivision</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TradeBalanceOwed_TXT__c</fullName>
        <label>Trade In Balance Owed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TradeMake_TXT__c</fullName>
        <label>Trade In Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TradeMileage_TXT__c</fullName>
        <label>Trade In Mileage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TradeModel_TXT__c</fullName>
        <label>Trade In Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TradeStatus_TXT__c</fullName>
        <label>Trade Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TradeValue_TXT__c</fullName>
        <label>Trade In Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TradeYear_YR__c</fullName>
        <label>Trade In Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransactionCode_CD__c</fullName>
        <label>Transaction Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BL Brochure Lead</fullName>
                </value>
                <value>
                    <fullName>PD Dealer lead from a Pre-Approval</fullName>
                </value>
                <value>
                    <fullName>PL Preview (GetOnTheList) Lead</fullName>
                </value>
                <value>
                    <fullName>VL Vehicle Lead only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transmission_TXT__c</fullName>
        <label>Transmission</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TriggerSendbyDate_DT__c</fullName>
        <label>Trigger Send by Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Triggertypecode__c</fullName>
        <label>Trigger Type Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Instant</fullName>
                    <default>true</default>
                    <label>Instant</label>
                </value>
                <value>
                    <fullName>Future</fullName>
                </value>
                <value>
                    <fullName>FixedDate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trim_TXT__c</fullName>
        <label>Model Trim</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UIDs__c</fullName>
        <label>UIDs</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidAddress_FLG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ValidEmail_FLG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ValidMobile_FLG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Mobile Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ValidName_TXT__c</fullName>
        <defaultValue>NULL</defaultValue>
        <label>Name Cache Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reject</fullName>
                </value>
                <value>
                    <fullName>Cache</fullName>
                </value>
                <value>
                    <fullName>Genuine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ValidPhoneNum_FLG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Phone Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Valid_Model_ID_FLG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Model ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Validateonly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validateonly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VehicleInterest_TXT__c</fullName>
        <label>Vehicle Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>buy</fullName>
                </value>
                <value>
                    <fullName>lease</fullName>
                </value>
                <value>
                    <fullName>sell</fullName>
                </value>
                <value>
                    <fullName>trade-in</fullName>
                </value>
                <value>
                    <fullName>test-drive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VehicleStatus_TXT__c</fullName>
        <label>Product Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Used</fullName>
                </value>
                <value>
                    <fullName>Cpo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vehicle_Ids_ID__c</fullName>
        <label>Vehicle IDs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vendor_Contact_Email__c</fullName>
        <label>Vendor Contact Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Contact_Name__c</fullName>
        <label>Vendor Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_YR__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YourDealershipServicesAmountSpentLast60M__c</fullName>
        <label>YourDealershipServicesAmountSpentLast60M</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YourDealershipServicesLast60Months_NUM__c</fullName>
        <label>YourDealershipServicesLast60Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>Model_ID__c</columns>
        <columns>FULL_NAME</columns>
        <columns>Lead_Provider__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Model_Name_NM__c</columns>
        <columns>Year_YR__c</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>StatusReason_TXT__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>SubDiv_TXT__c</columns>
        <columns>LeadProvider_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Created_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>All_Manual_Validation_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.ZIP</columns>
        <columns>LEAD.STATUS</columns>
        <columns>StatusReason_TXT__c</columns>
        <columns>LeadProvider_ID__c</columns>
        <columns>PreferredDealerAccount_ID__c</columns>
        <columns>ValidEmail_FLG__c</columns>
        <columns>ValidPhoneNum_FLG__c</columns>
        <columns>ValidAddress_FLG__c</columns>
        <columns>Model_TXT__c</columns>
        <columns>Year_YR__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Manual Validation</value>
        </filters>
        <label>All Manual Validation Leads</label>
    </listViews>
</CustomObject>